<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/bodder"
    android:layout_alignParentBottom="true"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/txt_menu_bottom_today"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_bottom1"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_bottom1"
        android:textColor="@drawable/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_bottom2"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_bottom2"
        android:textColor="@drawable/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>
    <TextView
        android:id="@+id/txt_menu_bottom_trend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_bottom3"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_bottom3"
        android:textColor="@drawable/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_diary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_bottom4"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_bottom4"
        android:textColor="@drawable/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_bottom5"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_bottom5"
        android:textColor="@drawable/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>
</LinearLayout>